--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.leaflet-container {
+    width: inherit;
+    height: inherit;
+}
